Closed
Bug 1625304
Opened 6 years ago
Closed 6 years ago
Remove INTERNAL_LOAD_FLAGS_IS_USER_TRIGGERED
Categories
(Core :: DOM: Navigation, defect)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
Details
Attachments
(1 file)
No description provided.
| Assignee | ||
Comment 1•6 years ago
|
||
It's unused (modulo assertions that mask it off), and I want to add something
similar for bug 1528305, so this avoids some confusion.
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/07160f498b51
Remove INTERNAL_LOAD_FLAGS_IS_USER_TRIGGERED. r=mattwoodrow
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in
before you can comment on or make changes to this bug.
Description
•