Bug 1625304 - Remove INTERNAL_LOAD_FLAGS_IS_USER_TRIGGERED. r=mattwoodrow

It's unused (modulo assertions that mask it off), and I want to add something
similar for bug 1528305, so this avoids some confusion.

Differential Revision: https://phabricator.services.mozilla.com/D68456

--HG--
extra : moz-landing-system : lando