docshell/base/nsDocShell.h
@@ -149,9 +149,6 @@ class nsDocShell final : public nsDocLoader,
     // Whether a top-level data URI navigation is allowed for that load
     INTERNAL_LOAD_FLAGS_FORCE_ALLOW_DATA_URI = 0x200,
 
-    // Whether the load was triggered by user interaction.
-    INTERNAL_LOAD_FLAGS_IS_USER_TRIGGERED = 0x1000,
-
     // Whether the load should go through LoadURIDelegate.
     INTERNAL_LOAD_FLAGS_BYPASS_LOAD_URI_DELEGATE = 0x2000,
   };
